fixed visibility of section headers

--- a/assets/css/open.less
+++ b/assets/css/open.less
@@ -3,5 +3,4 @@
   .section(@color1, @color2, @color3);
 
   height: 450px;
-  overflow: hidden;
 }
