--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -24,6 +24,7 @@ a {
   background: @background;
   position: relative;
   margin: 0px;
+  overflow: visible;
 
   > h1 {
     font-family: 'Galindo', cursive;
