--- a/assets/css/tweets.less
+++ b/assets/css/tweets.less
@@ -5,7 +5,6 @@
 
   color: #FFFFFF;
   height: 450px;
-  overflow: hidden;
 
   a {
     color: #FFFFFF;
